Update blocks so they have the correct spacing on the bottom

--- a/packages/blocks-next/src/blocks/product-quantity/style.scss
+++ b/packages/blocks-next/src/blocks/product-quantity/style.scss
@@ -1,7 +1,3 @@
 .wp-block-surecart-product-selected-price-ad-hoc-amount {
 	margin-bottom: var(--sc-form-row-spacing, 0.75em);
-
-	.sc-form-label {
-		color: inherit !important;
-	}
 }
