--- a/packages/blocks-next/src/styles/product-variants.scss
+++ b/packages/blocks-next/src/styles/product-variants.scss
@@ -2,6 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	gap: var(--sc-form-row-spacing);
+	border: none;
+	display: block;
+	margin-bottom: var(--sc-form-row-spacing, 0.75em);
 
 	> div {
 		flex: 1;
